--- a/css/agency.css
+++ b/css/agency.css
@@ -93,8 +93,8 @@ img::-moz-selection {
 }
 
 .btn-primary {
-  background-color: #de801e;
-  border-color: #de801e;
+  background-color: #9e5b15;
+  border-color: #9e5b15;
 }
 
 .btn-primary:active, .btn-primary:focus, .btn-primary:hover {
@@ -123,7 +123,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-brand {
-  color: #de801e;
+  color: #9e5b15;
   font-family: 'Kaushan Script', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -173,7 +173,7 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/header-bg.jpg");
+  background-image: url("https://source.unsplash.com/KKJj8Hz6_kA");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
